--- a/kong_dashboard.yaml
+++ b/kong_dashboard.yaml
@@ -2,11 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kong-dashboard-admin
-  namespace: whispircn-dev
 spec:
-  type: LoadBalancer
-  loadBalancerSourceRanges:
-  - 0.0.0.0/0
+  type: NodePort
   ports:
   - name: kong-dashboard-admin
     port: 8030
@@ -20,7 +17,6 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: kong-dashboard
-  namespace: whispircn-dev
 spec:
   replicas: 1
   template:
